k8s/keycloak/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16
        args: ["-p", "5430"]
        ports:
        - containerPort: 5430
        livenessProbe:
          exec:
            command: ["pg_isready", "-p", "5430", "-U", "keycloak", "-d", "keycloak"]
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command: ["pg_isready", "-p", "5430", "-U", "keycloak", "-d", "keycloak"]
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
spec:
  selector:
    app: postgres
  ports:
  - port: 5430
    targetPort: 5430
